Added a navigation menu (anchor links); reference made regarding utilization of BEM methodlogy (see https://getbem.com/).

--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
 </head>
 
 <body>
-    Test
+    <!-- Use of underscores and hyphens in the name scheme are due to applying the BEM method. Reference https://getbem.com/ "BEM — is a methodology that helps you to create reusable components and code sharing in front‑end development" -->
+    <section id="about-me">
+        <!-- Navigation Menu. -->
+        <nav>
+            <!-- Personal Logo. -->
+            <div class="personal_logo">
+                Frederick Thomas
+            </div>
+
+            <!-- Unorder List for Naviagation Menu. -->
+            <ul class="nav_link--list">
+                <li>
+                    <!-- Anchor link for Languages.  -->
+                    <a href="" class="nav_link--anchor link__hover-effect link__hover-effect--black">Languages</a>
+
+                    <!--Anchor link for  Project. -->
+                    <a href="" class="nav_link--anchor link__hover-effect link__hover-effect--black">Project</a>
+
+                    <!--Anchor link for  Contact. NOTE: THIS IS STYLE DIFFERRENTLY (because it's a primary call to action button). -->
+                    <a href="" class="nav_link--anchor link__link--anchor-primary">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
 </body>
 
 </html>
