Started styling Navigation Menu.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <!-- Unorder List for Naviagation Menu. -->
-            <ul class="nav_link--list">
+            <ul class="nav__link--list">
                 <li>
                     <!-- Anchor link for Languages.  -->
                     <a href="" class="nav_link--anchor link__hover-effect link__hover-effect--black">Languages</a>
