--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Navigation Menu. -->
         <nav>
             <!-- Personal Logo. -->
-            <div class="personal_logo">
+            <div class="personal__logo">
                 Frederick Thomas
             </div>
 
@@ -24,13 +24,22 @@
             <ul class="nav__link--list">
                 <li>
                     <!-- Anchor link for Languages.  -->
-                    <a href="" class="nav_link--anchor link__hover-effect link__hover-effect--black">Languages</a>
+                    <a href="" class="
+                    nav_link--anchor
+                    link__hover-effect
+                    link__hover-effect--black">Languages</a>
 
                     <!--Anchor link for  Project. -->
-                    <a href="" class="nav_link--anchor link__hover-effect link__hover-effect--black">Project</a>
+                    <a href="" class="
+                    nav_link--anchor
+                    link__hover-effect
+                    link__hover-effect--black">Project</a>
 
                     <!--Anchor link for  Contact. NOTE: THIS IS STYLE DIFFERRENTLY (because it's a primary call to action button). -->
-                    <a href="" class="nav_link--anchor link__link--anchor-primary">Contact</a>
+                    <a href="" class="
+                    nav__link--anchor
+                    nav__link--anchor-primary
+                    ">Contact</a>
                 </li>
             </ul>
         </nav>
