--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                     <h1 class="about-me__info--title">Hi! 👋🏿 I'm <span class="text--purple">Frederick Thomas</span></h1>
 
-                    <h2>
+                    <h2 class="about-me__info--subtitle">
                         <i>
                             👨🏾‍🎓 The Super Coding Ninja™ 🎷
                         </i>
