Correction: added class to image.

--- a/index.html
+++ b/index.html
@@ -48,16 +48,21 @@
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assets/me.jpg" alt="Awesome Picture of Frederick Thomas, Super Coding Ninja™!"
+                        <img src="./assets/me.jpg" alt="Awesome Picture of Frederick Thomas, Super Coding Ninja™!" class="about-me__picture">
                     </figure>
 
-                    <h1 class="about-me__info--title">Hi! 👋🏿 I'm <span class="text--purple">Frederick Thomas</span></h1>
+                    <h1 class="about-me__info--title">
+                        Hi! 👋🏿 I'm
+                        <span class="text--purple">
+                            Frederick Thomas
+                        </span>
+                    </h1>
 
-                    <h2 class="about-me__info--subtitle">
+                    <!-- <h2 class="about-me__info--title">
                         <i>
                             👨🏾‍🎓 The Super Coding Ninja™ 🎷
                         </i>
-                    </h2>
+                    </h2> -->
 
                     <p class="about-me__info--para">
                         I'm a <strong class="text--purple">Developer & Engineer</strong> who solves problems people don't know exist. Solving problems can be difficult, but living on the streets is more dire: CHOOSE YOUR HARD! I believe that every organization should strive to <strong class="text--purple">Learn</strong>, <strong class="text--purple">Teach</strong>, and <strong class="text--purple">Replicate</strong> ensuring generational success.
