Correction: Styled about me section.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="" class="
                     nav_link--anchor
                     link__hover-effect
-                    link__hover-effect--black">Languages</a>
+                    link__hover-effect--black">Languages</a>&nbsp;&nbsp;
 
                     <!--Anchor link for  Project. -->
                     <a href="" class="
@@ -58,14 +58,14 @@
                         </span>
                     </h1>
 
-                    <!-- <h2 class="about-me__info--title">
+                    <h2 class="about-me__info--subtitle">
                         <i>
-                            👨🏾‍🎓 The Super Coding Ninja™ 🎷
+                            👨🏾‍🎓The Super Coding Ninja™ 🎷
                         </i>
-                    </h2> -->
+                    </h2>
 
                     <p class="about-me__info--para">
-                        I'm a <strong class="text--purple">Developer & Engineer</strong> who solves problems people don't know exist. Solving problems can be difficult, but living on the streets is more dire: CHOOSE YOUR HARD! I believe that every organization should strive to <strong class="text--purple">Learn</strong>, <strong class="text--purple">Teach</strong>, and <strong class="text--purple">Replicate</strong> ensuring generational success.
+                        I'm a <strong class="emph">Developer & Engineer</strong> who solves problems people don't know exist. Solving problems can be difficult, but living on the streets is more dire: CHOOSE YOUR HARD! I believe that every organization should strive to <strong class="emph">Learn</strong>, <strong class="emph">Teach</strong>, and <strong class="emph">Replicate</strong> ensuring generational success.
                     </p>
                 </div>
             </div>
