--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://kit.fontawesome.com/e371fbb1b1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -44,7 +46,7 @@
             </ul>
         </nav>
 
-        <div>
+        <div class="flex flex-1">
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
@@ -52,15 +54,14 @@
                     </figure>
 
                     <h1 class="about-me__info--title">
-                        Hi! 👋🏿 I'm
-                        <span class="text--purple">
-                            Frederick Thomas
+                        <span class="text--neon">
+                            👋🏿 Frederick Thomas
                         </span>
                     </h1>
 
                     <h2 class="about-me__info--subtitle">
                         <i>
-                            👨🏾‍🎓The Super Coding Ninja™ 🎷
+                            👨🏾‍🎓 I Am The Super Coding Ninja™🎷
                         </i>
                     </h2>
 
