Corrections made, and icons were added.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <script src="https://kit.fontawesome.com/e371fbb1b1.js" crossorigin="anonymous"></script>
 </head>
 
+
 <body>
     <!-- Use of underscores and hyphens in the name scheme are due to applying the BEM method. Reference https://getbem.com/ "BEM — is a methodology that helps you to create reusable components and code sharing in front‑end development" -->
     <section id="about-me">
@@ -21,6 +23,7 @@
             <div class="personal__logo">
                 Frederick Thomas
             </div>
+            
 
             <!-- Unorder List for Naviagation Menu. -->
             <ul class="nav__link--list">
@@ -31,11 +34,13 @@
                     link__hover-effect
                     link__hover-effect--black">Languages</a>&nbsp;&nbsp;
 
+
                     <!--Anchor link for  Project. -->
                     <a href="" class="
                     nav_link--anchor
                     link__hover-effect
                     link__hover-effect--black">Project</a>
+
 
                     <!--Anchor link for  Contact. NOTE: THIS IS STYLE DIFFERRENTLY (because it's a primary call to action button). -->
                     <a href="" class="
@@ -46,6 +51,8 @@
             </ul>
         </nav>
 
+
+        <!-- About Me Section. -->
         <div class="flex flex-1">
             <div class="about-me__info row">
                 <div class="about-me__info--container">
@@ -53,21 +60,60 @@
                         <img src="./assets/me.jpg" alt="Awesome Picture of Frederick Thomas, Super Coding Ninja™!" class="about-me__picture">
                     </figure>
 
+
+                    <!-- Big Introduction Header. -->
                     <h1 class="about-me__info--title">
                         <span class="text--neon">
                             👋🏿 Frederick Thomas
                         </span>
                     </h1>
 
+
+                    <!-- My trademark included. -->
                     <h2 class="about-me__info--subtitle">
                         <i>
                             👨🏾‍🎓 I Am The Super Coding Ninja™🎷
                         </i>
                     </h2>
 
+
+                    <!-- About Me Paragraph. -->
                     <p class="about-me__info--para">
                         I'm a <strong class="emph">Developer & Engineer</strong> who solves problems people don't know exist. Solving problems can be difficult, but living on the streets is more dire: CHOOSE YOUR HARD! I believe that every organization should strive to <strong class="emph">Learn</strong>, <strong class="emph">Teach</strong>, and <strong class="emph">Replicate</strong> ensuring generational success.
                     </p>
+
+
+                    <!-- Icons. -->
+                     <div>
+                        <!-- GitHub Icon. -->
+                        <a href="https://github.com/supercodingninja" target="_new">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+
+
+                        <!-- LinkedIn Icon. -->
+                        <a href="https://www.linkedin.com/in/discoverfrederickthomas/" target="_new">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+
+
+                        <!-- Facebook Icon. ---->
+                        <a href="https://www.facebook.com/SuperCodingNinja" target="_new">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+
+                        
+                        <!-- X-Icon-->
+                        <a href="https://x.com/SCN2014Est" target="_new">
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </a>
+
+
+                        <!-- CodePan.io Icon.-->
+                       <a href="https://codepen.io/SuperCodingNinja" target="_new">
+                        <i class="fa-brands fa-codepen"></i>
+                       </a>
+                     </div>
                 </div>
             </div>
         </div>
