Still working on icon padding (not correct); and favicon was added.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Document</title>
+    <title>Super Coding Ninja™</title>
 
+    <!-- Stylesheet. -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Favicon. -->
+    <link rel="icon" type="image/x-icon" href="/assets/use4favicon.jpeg">
 
     <script src="https://kit.fontawesome.com/e371fbb1b1.js" crossorigin="anonymous"></script>
 </head>
@@ -86,19 +90,19 @@
                     <!-- Icons section. I would normally just named class "icons"; and if I used additional icons sonewhere else on the page, i. e. "footer," then I would name that class "footerIcons." #Simple -->
                      <div class="about-me__links">
                         <!-- GitHub Icon. -->
-                        <a href="https://github.com/supercodingninja" target="_new"><i class="fa-brands fa-github"></i></a>&nbsp;&nbsp;&nbsp;
+                        <a href="https://github.com/supercodingninja" target="_new"><i class="fa-brands fa-github"></i></a>
 
 
                         <!-- LinkedIn Icon. -->
-                        <a href="https://www.linkedin.com/in/discoverfrederickthomas/" target="_new"><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
+                        <a href="https://www.linkedin.com/in/discoverfrederickthomas/" target="_new"><i class="fa-brands fa-linkedin"></i></a>
 
 
                         <!-- Facebook Icon. ---->
-                        <a href="https://www.facebook.com/SuperCodingNinja" target="_new"><i class="fa-brands fa-facebook"></i></a>&nbsp;
+                        <a href="https://www.facebook.com/SuperCodingNinja" target="_new"><i class="fa-brands fa-facebook"></i></a>
 
                         
                         <!-- X-Icon-->
-                        <a href="https://x.com/SCN2014Est" target="_new"><i class="fa-brands fa-x-twitter"></i></a>&nbsp;&nbsp;&nbsp;
+                        <a href="https://x.com/SCN2014Est" target="_new"><i class="fa-brands fa-x-twitter"></i></a>
 
 
                         <!-- CodePan.io Icon.-->
