After realizing that each icon had a class from fontawesome.com, I added my class desired prior to the .

--- a/index.html
+++ b/index.html
@@ -90,23 +90,23 @@
                     <!-- Icons section. I would normally just named class "icons"; and if I used additional icons sonewhere else on the page, i. e. "footer," then I would name that class "footerIcons." #Simple -->
                      <div class="about-me__links">
                         <!-- GitHub Icon. -->
-                        <a href="https://github.com/supercodingninja" target="_new"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/supercodingninja" target="_new"><i class="about-me__links fa-brands fa-github"></i></a>
 
 
                         <!-- LinkedIn Icon. -->
-                        <a href="https://www.linkedin.com/in/discoverfrederickthomas/" target="_new"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/discoverfrederickthomas/" target="_new"><i class="about-me__links fa-brands fa-linkedin"></i></a>
 
 
                         <!-- Facebook Icon. ---->
-                        <a href="https://www.facebook.com/SuperCodingNinja" target="_new"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/SuperCodingNinja" target="_new"><i class="about-me__links fa-brands fa-facebook"></i></a>
 
                         
                         <!-- X-Icon-->
-                        <a href="https://x.com/SCN2014Est" target="_new"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://x.com/SCN2014Est" target="_new"><i class="about-me__links fa-brands fa-x-twitter"></i></a>
 
 
                         <!-- CodePan.io Icon.-->
-                       <a href="https://codepen.io/SuperCodingNinja" target="_new"><i class="fa-brands fa-codepen"></i></a>
+                       <a href="https://codepen.io/SuperCodingNinja" target="_new"><i class="about-me__links fa-brands fa-codepen"></i></a>
                      </div>
                 </div>
             </div>
