--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <!-- About Me Paragraph. -->
                     <p class="about-me__info--para">
-                        I'm a <strong class="emph">Developer & Engineer</strong> who solves problems people don't know exist. Solving problems can be difficult, but living on the streets is more dire: CHOOSE YOUR HARD! I believe that every organization should strive to <strong class="emph">Learn</strong>, <strong class="emph">Teach</strong>, and <strong class="emph">Replicate</strong> ensuring generational success.
+                        I'm a <strong class="emph">Developer & Engineer</strong> who solves problems people don't know exist.  Solving problems can be difficult, but so is failing:&nbsp;<strong class="emph">Learn</strong>,&nbsp;<strong class="emph">Teach</strong>, and&nbsp;<strong class="emph">Replicate</strong>&nbsp;to ensure generational success.
                     </p>
 
 
@@ -109,6 +109,10 @@
                        <a href="https://codepen.io/SuperCodingNinja" target="_new"><i class="about-me__links fa-brands fa-codepen"></i></a>
                      </div>
                 </div>
+
+                <figure class="about-me__img--container">
+                    <img src="/assets/undraw_websites.svg" class="about-me__img" alt=""/>
+                </figure>
             </div>
         </div>
     </section>
