Git icons equavalent size (some icons were also given suze parameters inline tag: because they stopped at certain px sizes (this is possibly due to the library image address belong to).

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     AI Chatbot
                                 </p>
 
-                                <img src="https://cdn-icons-png.flaticon.com/128/8943/8943377.png" alt="AI Chatbot" align-items="center"/>
+                                <img src="https://cdn-icons-png.flaticon.com/128/8943/8943377.png" alt="AI Chatbot" align-items="center" width="50px" height="50px"/>
                             </div>
                         </figure>
                     </div>
@@ -160,7 +160,7 @@
                     <!-- chartJS -->
                     <div class="LANGUAGE">
                         <figure class="language__img--wrapper">
-                            <img src="https://www.chartjs.org/media/logo-title.svg" alt="chartjs"/>
+                            <img src="https://www.chartjs.org/media/logo-title.svg" alt="chartjs" width="50px" height="50px"/>
                         </figure>
                     </div>
 
@@ -188,7 +188,7 @@
                     <!-- Heroku -->
                     <div class="LANGUAGE">
                         <figure class="language__img--wrapper">
-                            <img src="https://www.vectorlogo.zone/logos/heroku/heroku-icon.svg" alt="heroku"/>
+                            <img src="https://www.vectorlogo.zone/logos/heroku/heroku-icon.svg" alt="heroku" width="50px" height="50px"/>
                         </figure>
                     </div>
 
