Hover: taking a different approach, per the tutorial. I believe I know how to make this approach function properly.

--- a/index.html
+++ b/index.html
@@ -144,11 +144,14 @@
                         <!-- A. I. Chatbot -->
                         <div class="LANGUAGE">
                             <figure class="language__img--wrapper">
-                                <div class="groovy language__name" align-items="center">
+                                <!--<div class="groovy" align-items="center">
                                     AI<img src="https://cdn-icons-png.flaticon.com/128/8943/8943377.png" class="language__img" alt="AI Chatbot" align-items="center" width="50px" height="50px"/>Chatbot
-                                </div>
+                                </div>-->
 
-                                
+                                <img src="https://cdn-icons-png.flaticon.com/128/8943/8943377.png" class="language__img" alt="AI Chatbot" align-items="center"/>
+
+                                <!-- Hover Effect: Name of Tool/Language Appears -->
+                            <span class="language__name groovy">AI Chatbot</span>
                             </figure>
                         </div>
                         
