Keeping it simple so that my peer code review is more effective.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                     <!-- Big Introduction Header. -->
                     <h1 class="about-me__info--title">
-                        <span class="text--neon">
+                        <span class="text--purple">
                             👋🏿 Frederick Thomas
                         </span>
                     </h1>
@@ -125,7 +125,7 @@
             <div class="row">
                 <!-- Tech Stack Section Title-->
                 <h1 class="section__title">
-                    Tech Stack
+                    <span class="text--purple">Tech Stack</span>
                 </h1>
 
                 <!-- Tech Stack Icons. -->
