--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <!-- Chart.js -->
                         <div class="LANGUAGE">
                             <figure class="language__img--wrapper">
-                                <img src="https://www.chartjs.org/media/logo-title.svg" class="language__img" alt="Chart.js" width="50px" height="50px"/>
+                                <img src="https://www.chartjs.org/media/logo-title.svg" class="language__img zoom" alt="Chart.js" width="50px" height="50px"/>
                             </figure>
 
                             <!-- Hover Effect: Name of Tool/Language Appears -->
@@ -196,7 +196,7 @@
                         <!-- express -->
                         <div class="LANGUAGE">
                             <figure class="language__img--wrapper">
-                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg" class="language__img" alt="express"/>
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg" class="language__img zoom3" alt="express"/>
                             </figure>
 
                             <!-- Hover Effect: Name of Tool/Language Appears -->
@@ -218,7 +218,7 @@
                         <!-- Heroku -->
                         <div class="LANGUAGE">
                             <figure class="language__img--wrapper">
-                                <img src="https://www.vectorlogo.zone/logos/heroku/heroku-icon.svg" class="language__img" alt="heroku" width="50px" height="50px"/>
+                                <img src="https://www.vectorlogo.zone/logos/heroku/heroku-icon.svg" class="language__img zoom2" alt="heroku" width="50px" height="50px"/>
                             </figure>
 
                             <!-- Hover Effect: Name of Tool/Language Appears -->
@@ -277,7 +277,7 @@
                         <!-- nodeJS -->
                         <div class="LANGUAGE">
                             <figure class="language__img--wrapper">
-                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg" class="language__img" alt="nodejs"/>
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg" class="language__img zoom2" alt="nodejs"/>
                             </figure>
 
                             <!-- Hover Effect: Name of Tool/Language Appears -->
@@ -353,7 +353,7 @@
                         <!-- webpack -->
                         <div class="LANGUAGE">
                             <figure class="language__img--wrapper">
-                                <img src="https://raw.githubusercontent.com/devicons/devicon/d00d0969292a6569d45b06d3f350f463a0107b0d/icons/webpack/webpack-original-wordmark.svg" alt="webpack" align-items="center" width="100px" height="100px"/>
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/d00d0969292a6569d45b06d3f350f463a0107b0d/icons/webpack/webpack-original-wordmark.svg" class="language__img zoom" alt="webpack" align-items="center" width="100px" height="100px"/>
                             </figure>
 
                             <!-- Hover Effect: Name of Tool/Language Appears -->
