--- a/index.html
+++ b/index.html
@@ -341,14 +341,17 @@
                             <span class="language__name groovy">Saas</span>
                         </div>
 
-                        <!-- Travis CI-->
+                        <<!-- Travis CI-->
                         <div class="LANGUAGE">
                             <figure class="language__img--wrapper">
-                                <img src="https://www.vectorlogo.zone/logos/travis-ci/travis-ci-icon.svg" class="language__img" alt="Travis CI"/>
+                                <p class="groovy travis" align-items="center" style="display: inline-block;">
+                                    <img src="https://www.vectorlogo.zone/logos/travis-ci/travis-ci-icon.svg" alt="Travis CI" class="language__img travis" align-text="center" align-items="center"/>
+                                    
+                                    <p class="language__name groovy travis" align="center" alt="Travis CI">
+                                        Travis&nbsp;CI
+                                    </p>
+                                </p>
                             </figure>
-
-                            <!-- Hover Effect: Name of Tool/Language Appears -->
-                            <span class="language__name groovy">Travis CI</span>
                         </div>
 
                         <!-- TypeScript-->
