Correcting TECH STACK, and CSS.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -156,7 +156,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -174,7 +174,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -192,7 +192,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -210,7 +210,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -228,7 +228,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -246,7 +246,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -264,7 +264,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -282,7 +282,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -300,7 +300,7 @@
 
                 <!--===== Tech Stack Languages' and Tools' Icons. =====-->
                  <!-- Future Desired Is To Use The Icons Here 👉🏿 https://www.tech-stack-icons.com/ -->
-                 <div class="language__tools__list">
+                 <div class="languages__tools__list">
                     <div class="LnT">
 
                         <figure class="language__tools__img--wrapper">
@@ -339,7 +339,7 @@
                 <li class="project">
                     <div class="project__wrapper">
                         <!-- 👇🏿 Place Project's .gif/Image Here.👇🏿-->
-                        <img src="./assets/gif/HELLO-WORLD-ezgif.com-video-to-gif-converter.gif" class="project__img" alt="My First GitHub Repository">
+                        <img src="./assets/gif/HELLO-WORLD.gif" class="project__img" alt="My First GitHub Repository">
                     
                         <!-- 👇🏿 This Class Is For The Entire Project's Description- Remember! 👇🏿 -->
                         <div class="project__description">
