Effectively made different colors appeared for font.

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
                                 <!-- 👇🏿 LIst of Technologies I Used In The Project. 👇🏿 -->
                                 <h4 class="project__sub-title">
-                                    <span>Technologies<sup class="info">i</sup></span>
+                                    <span class="technolgies">Technologies<sup class="info">i</sup></span>
                                 </h4>
 
                                 <p class="project__passage">
