Info tag (html code).

--- a/index.html
+++ b/index.html
@@ -545,7 +545,8 @@
 
                                 <!-- 👇🏿 LIst of Technologies I Used In The Project. 👇🏿 -->
                                 <h4 class="project__sub-title">
-                                    <span class="technolgies">Technologies<sup class="info">i</sup></span>
+                                    <!-- Ref. for HTML code for info icon (instead of paying to use the same icon from fontawesome.com) https://stackoverflow.com/questions/33878539/is-there-an-html-entity-for-an-info-icon -->
+                                    <span class="technolgies"><sup class="info glow">&#9432;</sup>seigolonhceT</span>
                                 </h4>
 
                                 <p class="project__passage">
