Replaced .about-me__img with a oersonal image AI generated.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 
 <body>
+    <!--HTML Currency Symbols, Currency Entities and ASCII Currency Character Code Reference https://www.toptal.com/designers/htmlarrows/symbols/ -->>
+    
     <!-- Use of underscores and hyphens in the name scheme are due to applying the BEM method. Reference https://getbem.com/ "BEM — is a methodology that helps you to create reusable components and code sharing in front‑end development" -->
    <!--========== About Me Secton. ==========-->
     <section id="about-me">
@@ -79,7 +81,7 @@
 
                     <!-- My trademark included. -->
                     <h2 class="about-me__info--subtitle">
-                        <i>👨🏾‍🎓&nbsp;&nbsp;And I Am The Super Coding Ninja™&nbsp;&nbsp;<sup>🎶</sup>🎷</i>
+                        <i>👨🏾‍🎓&nbsp;&ldquo;And I Am The Super Coding Ninja&trade;&rdquo;&nbsp;<sup>🎶</sup>🎷</i>
                     </h2>
 
 
@@ -123,7 +125,7 @@
                 </div>
 
                 <figure class="about-me__img--container">
-                    <img src="/assets/img/undraw_websites.svg" class="about-me__img" alt=""/>
+                    <img src="/assets/img/remote2.png" class="about-me__img" alt="Me, Coding, Remotely."/>
                 </figure>
             </div>
         </div>
