--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
 
                 <figure class="about-me__img--container">
-                    <img src="/assets/img/remote2.png" class="about-me__img" alt="Me, Coding, Remotely."/>
+                    <img src="/assets/img/remote2.png" class="about-me__img" alt="Me, coding, Remotely."/>
                 </figure>
             </div>
         </div>
@@ -552,21 +552,21 @@
                                 </h4>
 
                                 <p class="project__passage">
-                                    In every Developer's & Engineer's life, "Hello, World" is as special as a baby's first step- perhaps, not everyone is able to walk; but anyone can code: they just have to have stick-to-it-ness - GRIT! These were my first steps: "Hello, World!!!"
+                                    My First GitHub Repository (worth the look): In every Developer's & Engineer's life, "Hello, World" is as special as a baby's first step- perhaps, not everyone is able to walk; but anyone can code: they just have to have stick-to-it-ness - GRIT! These were my first steps: "Hello, World!!!"
                                 </p>
 
-                                <div class="project__links">
+                                <div class="project__links glow">
                                     <p>
                                         <!-- 👇🏿 https://www.github.com/WhatEverRepoIpickThatIhaveDoneGoesHere 👇🏿 -->
-                                        <a href="https://github.com/supercodingninja/supercodingninja.github.io" target="_blank">
-                                            <i class="fa-brands fa-github project__links"></i>
+                                        <a href="https://github.com/supercodingninja/supercodingninja.github.io" target="_blank" style="text-decoration: none;">
+                                            <i class="fa-brands fa-github project__links" style="text-decoration: none;"></i>
                                         </a>
 
 
                                         <!-- 👇🏿 Deployed Application Goes Here (VITAL). 👇🏿 -->
                                         <a href="https://supercodingninja.github.io/" target="_blank">
                                             <!-- 👇🏿 Use Your Own Font Class From https://fontawesome.com/ Here. 👇🏿 -->
-                                            <i class="fa-solid fa-link project__links">
+                                            <i class="fa-solid fa-link project__links" style="text-decoration: none;">
                                             </i>
                                         </a>
                                     </p>
