--- a/index.html
+++ b/index.html
@@ -555,18 +555,18 @@
                                     My First GitHub Repository (worth the look): In every Developer's & Engineer's life, "Hello, World" is as special as a baby's first step- perhaps, not everyone is able to walk; but anyone can code: they just have to have stick-to-it-ness - GRIT! These were my first steps: "Hello, World!!!"
                                 </p>
 
-                                <div class="project__links glow">
+                                <div class="project__links">
                                     <p>
                                         <!-- 👇🏿 https://www.github.com/WhatEverRepoIpickThatIhaveDoneGoesHere 👇🏿 -->
                                         <a href="https://github.com/supercodingninja/supercodingninja.github.io" target="_blank" style="text-decoration: none;">
-                                            <i class="fa-brands fa-github project__links" style="text-decoration: none;"></i>
+                                            <i class="fa-brands fa-github project__links glow3" style="text-decoration: none;"></i>
                                         </a>
 
 
                                         <!-- 👇🏿 Deployed Application Goes Here (VITAL). 👇🏿 -->
                                         <a href="https://supercodingninja.github.io/" target="_blank">
                                             <!-- 👇🏿 Use Your Own Font Class From https://fontawesome.com/ Here. 👇🏿 -->
-                                            <i class="fa-solid fa-link project__links" style="text-decoration: none;">
+                                            <i class="fa-solid fa-link project__links glow2" style="text-decoration: none;">
                                             </i>
                                         </a>
                                     </p>
