--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
             <div class="row">
             
                 <h1>
-                    <i>Here are some of my<span class="pj">Projects</span><span style="color: #6030b1; font-size: 32px;">!</i></span>
+                    <i>Hover over & Explore my<span class="pj">Projects</span><span style="color: #6030b1; font-size: 32px;">!</i></span>
                 </h1>
 
 
@@ -1087,6 +1087,18 @@
                                                 fa-github 
                                                 project__links 
                                                 glow3" style="text-decoration: none;">
+                                            </i>
+                                        </a>
+
+
+                                        <!-- 👇🏿 Deployed Application Goes Here (VITAL). 👇🏿 -->
+                                        <a href="https://youtu.be/HfajJxcNv00" target="_blank">
+                                            <!-- 👇🏿 Use Your Own Font Class From https://fontawesome.com/ Here. 👇🏿 -->
+                                            <i class="
+                                                fa-solid 
+                                                fa-link 
+                                                project__links 
+                                                glow2" style="text-decoration: none;">
                                             </i>
                                         </a>
 
