Still working out the text replacement idea: instead of targeting the pseudo selector, I'm trying to find a way to target individual class/child- I'm trying to target the individual projects and replace "Technologies" with the content pertaining to that specific project.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
         <nav>
             <!-- Personal Logo. -->
             <div class="BIG">
-                <i>Frederick<sup class="sup2">III</sup></i>
+                <i>Frederick
+                    <sup class="
+                        III 
+                        sup2">
+                        III
+                    </sup>
+                </i>
             </div>
             
 
